bug(styles): fixing an alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,13 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
+  --max-width: '100%';
+  /* --border-radius: 12px; */
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --foreground-rgb: 0, 0, 0;
+  /* --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-end-rgb: 255, 255, 255; */
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -42,14 +42,14 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    /* --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0; */
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
       to bottom right,
-      rgba(1, 65, 255, 0),
+      /* rgba(1, 65, 255, 0), */
       rgba(1, 65, 255, 0),
       rgba(1, 65, 255, 0.3)
     );
@@ -83,6 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  padding-right: 0px;
 }
 
 body {
@@ -136,5 +137,5 @@ body.dark{
 }
 
 body{
-  padding-right: 0 !important;
+  padding-right:0 !important;
 }
